[package]
name = "dbx-backups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
clap = { version = "3.2.12", features = ["derive"] }
dropbox-sdk = "0.15.0"
thiserror = "1.0.31"
